--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "desafios",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
+    "start":"node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
