--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/totoargumedo/desafiosBackendCH#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.18.1",
+    "multer": "^1.4.4"
   }
 }
