--- a/Handlebars/package.json
+++ b/Handlebars/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/totoargumedo/desafiosBackendCH#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.5",
     "multer": "^1.4.4"
   }
 }
