--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
+    "knex": "^2.1.0",
     "multer": "^1.4.4",
-    "socket.io": "^4.5.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.1",
+    "sqlite3": "^5.0.8"
   }
 }
