--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "desafios",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,9 @@
   },
   "homepage": "https://github.com/totoargumedo/desafiosBackendCH#readme",
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.5",
-    "knex": "^2.1.0",
-    "multer": "^1.4.4",
-    "mysql": "^2.18.1",
-    "socket.io": "^4.5.1",
-    "sqlite3": "^5.0.8"
+    "mongoose": "^6.4.0",
+    "socket-io": "^1.0.0"
   }
 }
