--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@faker-js/faker": "^7.3.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
-    "socket-io": "^1.0.0"
+    "normalizr": "^3.6.2",
+    "socket.io": "^4.5.1"
   }
 }
