--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/totoargumedo/desafiosBackendCH#readme",
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
+    "connect-mongo": "^4.6.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.4.0",
     "normalizr": "^3.6.2",
     "socket.io": "^4.5.1"
